project2/spl-spec/my_test/test_11912013_2.out
Error type 16 at Line 1: the structure should be defined first.
Error type 2 at Line 8: function should be invoked with a definition.
